@@ -2343,3 +2343,5 @@ Added -D and -n option to gendaymtx to output sun description and skip
 matrix output on request.
 
 Updated eplus_uvf to work with IDF version 9.x, checking version number.
+
+Fix to glarendx issues with dgi calculation.
